<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movie Catalogue</string>

    <!-- Title -->
    <string name="movie_title_hint">Movie Title</string>
    <string name="title_bar_search_movie">Search Movie</string>
    <string name="title_bar_now_playing">Now Playing</string>
    <string name="title_bar_up_comming">Up Coming</string>
    <string name="title_bar_favorite">Favorite</string>
    <string name="title_bar_setting">Setting</string>
    <string name="title_bar_setting_laguage">Change Language</string>
    <string name="search">Search</string>
    <string name="overview">Overview</string>
    <string name="release">Release</string>
    <string name="genres">Genres</string>
    <string name="rating">Rating</string>
    <string name="language">language</string>
    <string name="duration">duration</string>

    <!--placeholder-->
    <string name="language_placeholder">en</string>
    <string name="title_placeholder">Title</string>
    <string name="description_placeholder">Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting.</string>

    <!-- Warning Message-->
    <string name="warning_message_movie_empty_search">Masukan Movie yang anda cari!</string>
    <string name="error_problem_text" tools:keep="@string/error_problem_text">Terjadi kesalahan server</string>
    <string name="no_data_text">Movie tidak ditemukan</string>
    <string name="no_favorite_text">Tidak ada daftar favorite</string>
    <string name="add_favorite_message">Berhasil menambahkan ke favorit</string>
    <string name="add_fail_favorite_message">Gagal Menambahkan ke favorit</string>
    <string name="remove_favorite_message">Berhasil menghapus ke favorit</string>
    <string name="remove_fail_favorite_message">Gagal menghapus ke favorit</string>
    <string name="message_warning_all_movie_loaded">All Movie Loaded</string>
    <string name="no_genres">No genres</string>
    <string name="text_no_overview">No overview</string>
    <string name="dummy_genre">Fantasy</string>
    <string name="placeholder_value">7.0</string>
    <string name="placeholder_date">2020–05–01</string>
    <string name="appwidget_text" tools:keep="@string/appwidget_text">EXAMPLE</string>
    <string name="add_widget" tools:keep="@string/add_widget">Add widget</string>

    <!-- Content -->
    <string name="daily_reminder_content">Catalogue Movie missing you!</string>

    <string name="notification">Notification</string>
    <string name="remember_app_content">Always Remember application for me</string>
    <string name="remember_app_subcontent">notification show everyday at 07:00 AM, if you go to home menu</string>
    <string name="remember_release_movie_content">Always Show Release Movie</string>
    <string name="remember_release_movie_subcontent">notification show everyday at 08:00 AM</string>
    <string name="release_today_content">has been release today!</string>
    <string name="daily_reminder_on_text">Success Active Notification daily reminder!</string>
    <string name="daily_reminder_off_text" tools:keep="@string/daily_reminder_off_text">Success Non-Active Notification daily reminder!</string>
    <string name="release_movie_reminder_on_text">Success Active Notification release movie reminder!</string>
    <string name="release_movie_reminder_off_text" tools:keep="@string/release_movie_reminder_off_text">Success Non-Active Notification release movie reminder!</string>

</resources>
