<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_toolbar"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_main_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:id="@+id/sv_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <!-- Global Wrapper -->
            <LinearLayout
                android:id="@+id/ll_global_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Header -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/margin_5dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_item_photo"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        tools:src="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:paddingStart="@dimen/margin_10dp"
                        android:paddingEnd="@dimen/margin_10dp"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/text_dimens_20sp"
                        android:textStyle="bold"
                        tools:text="@string/title_placeholder" />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_10dp"
                        android:paddingEnd="@dimen/margin_10dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_dimens_12sp"
                        android:textStyle="normal"
                        tools:text="@string/description_placeholder" />

                    <!-- Rating, Duration, Language Wrapper -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="@dimen/activity_vertical_margin"
                        android:weightSum="1">

                        <!-- Rating Wrapper -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.342"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_rating"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/red"
                                android:textSize="@dimen/text_dimens_30sp"
                                tools:text="@string/placeholder_value" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rating"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/text_dimens_12sp" />

                        </LinearLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/line_vertical_20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.004"
                            android:background="@android:color/darker_gray" />

                        <!-- Duration Wrapper -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_duration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/red"
                                android:textSize="@dimen/text_dimens_30sp"
                                tools:text="@string/placeholder_value" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/duration"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/text_dimens_12sp" />


                        </LinearLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/line_vertical_20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.004"
                            android:background="@android:color/darker_gray" />

                        <!-- Duration Wrapper -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.342"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_language"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/red"
                                android:textSize="@dimen/text_dimens_30sp"
                                tools:text="@string/language_placeholder" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/language"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/text_dimens_12sp" />


                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

                <!-- Content-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/margin_5dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genres"
                        android:textSize="@dimen/text_dimens_16sp"
                        android:textStyle="bold" />

                    <!-- Content -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_genre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:layoutManager="LinearLayoutManager"
                            tools:listitem="@layout/column_item_genre"
                            tools:orientation="horizontal" />

                        <TextView
                            android:id="@+id/tv_no_genre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_genres"
                            android:textSize="@dimen/text_dimens_16sp"
                            android:visibility="gone" />
                    </RelativeLayout>

                </LinearLayout>

                <!-- Release Date -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/margin_10dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/margin_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release"
                        android:textSize="@dimen/text_dimens_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/margin_5dp"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/text_dimens_16sp"
                        android:textStyle="normal"
                        tools:text="@string/placeholder_date" />

                </LinearLayout>


                <!-- Overview -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/margin_10dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/margin_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textSize="@dimen/text_dimens_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/margin_5dp"
                        android:textSize="@dimen/text_dimens_16sp"
                        android:textStyle="normal"
                        tools:text="@string/description_placeholder" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>